@@ -110,6 +110,15 @@ class BackendTestCase(unittest.TestCase):
             (functions.Sqrt(2.), 1.4142135623731),
             (functions.Trunc(42.8), 42),
             (functions.Trunc(42.4348, 2), 42.43),
+            (functions.Acos(0.5), 1.0471975511965979),
+            (functions.Asin(0.5), 0.5235987755982989),
+            (functions.Atan(0.5), 0.4636476090008061),
+            (functions.Atan2(0.5, 0.5), 0.7853981633974483),
+            (functions.Cos(1), 0.5403023058681398),
+            (functions.Cot(0), math.inf),
+            (functions.Cot(1), 0.6420926159343306),
+            (functions.Sin(1), 0.8414709848078965),
+            (functions.Tan(1), 1.5574077246549023),
             (functions.CharLength('jose'), 4),
             (functions.Lower('TOM'), 'tom'),
             (functions.Overlay('Txxxxas', 'hom', 2, 4), 'Thomas'),
